# MyVoiceTyping

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MyVoiceInput.spec  MyVoiceTyping.spec  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  build_dmg.sh  create_signing_cert.sh  icon.icns  pyproject.toml  requirements.txt  run.py  runtime_hook.py  setup.py  test_funasr.py  test_hotkey.py  test_selfhost_rewrite_perf.py
.github/ISSUE_TEMPLATE/: ai_coding_feedback.md  beta_3min_feedback.md  bug_report.md  config.yml  download_install_blocker.md  experience_feedback.md  feature_request.md  use_case_feedback.md
.github/workflows/: pages.yml
assets/: icon.icns
data/config/: app_config.json  main_prompt.md
docs/: ALTERNATIVES.md  ALTERNATIVES.zh-CN.md  BETA_TESTING.zh-CN.md  COMMUNITY_PROOF.md  COMMUNITY_SHARING.md  DEMO.md  DEMO_30S.zh-CN.md  DEMO_ASSETS.md  DEMO_VIDEO.md  FAQ.md  INDEX.zh-CN.md  LICENSE_DECISION.zh-CN.md  MODEL.md  PAGES_SETUP.md  PRESS_KIT.md  PRIVACY.md  QUICKSTART.zh-CN.md  SELF_EVALUATION.md  TRIAL_TASKS.zh-CN.md  TYPELESS_ALTERNATIVE.zh-CN.md  USE_CASES.zh-CN.md  apple_pc_optimization_report.md  example.md  index.html  llms.txt  project_analysis.md  revert.md  robots.txt  sitemap.xml
docs/design/: ui优化.md
docs/landing/: index.html  llms.txt  robots.txt  sitemap.xml
scripts/: auto_tune_lora.py  build_app.sh  convert_scel_hotwords.py  install_llama_cpp_tools.sh
src/: __init__.py  config.py  gui_tk.py  main.py
src/components/: __init__.py  audio_recorder.py  config_manager.py  gui_tk.py  hotkey.py  (+4 more)
test/: test-ollama.py
(+26 files in other folders)
