[build-system]
requires = ["setuptools>=61.0", "wheel", "py2app>=0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "MyVoiceInput"
version = "0.1.0"
dependencies = [
    # 核心科学计算库
    "numpy>=1.21.6",
    # GUI 自动化控制
    "pyautogui>=0.9.53",
    # 图像处理库
    "Pillow>=9.3.0",
    # YAML 解析库
    "PyYAML>=6.0",
    # 一次性安装所有常用 macOS 框架
    "pyobjc>=9.2",
    # 辅助依赖（pyautogui 依赖链）
    "pygetwindow>=0.0.9",
    "pyscreeze>=0.1.28",
    "pymsgbox>=1.0.9",
    "pytweening>=1.0.4",
    "mouseinfo>=0.1.3",
    "pyperclip>=1.8.2",
    # 其他辅助库
    "importlib-metadata>=4.8.1",
    "typing-extensions>=4.4.0"
]

# 添加py2app打包配置
[tool.py2app]
# 指定应用入口文件（请替换为你的实际入口文件路径）
script = "run.py"

[tool.py2app.options.py2app]
# 应用图标（可选，需要准备.icns格式图标文件）
iconfile = "icon.icns"
# 最小macOS版本要求
minimum_system_version = "10.14"
# 显式包含 py2app 可能找不到的包
packages = ["numpy", "PIL", "yaml"]